/**
 * LocalFileService ç”¨æˆ·ä¸šåŠ¡é€»è¾‘å®ç°
 *
 * è¿™ä¸ªæ–‡ä»¶å®ç°äº† LocalFileService.SendFile RPC æ–¹æ³•ï¼Œ æ¨¡æ‹Ÿäº†æ–‡ä»¶ä¼ è¾“æµç¨‹ï¼š
 * 1. å‘ç° FileTransferService
 * 2. å‘é€ StartTransfer RPC
 * 3. å‘é€ DataStream chunks
 * 4. å‘é€ EndTransfer RPC
 *
 * ä½¿ç”¨ protobuf gradle æ’ä»¶ç”Ÿæˆçš„æ¶ˆæ¯ç±»ã€‚
 */
package com.example

// ä½¿ç”¨ protobuf ç”Ÿæˆçš„æ¶ˆæ¯ç±»
import android.util.Log
import com.example.generated.LocalFileServiceHandler
import file_transfer.FileTransfer.EndTransferRequest
import file_transfer.FileTransfer.EndTransferResponse
import file_transfer.FileTransfer.StartTransferRequest
import file_transfer.FileTransfer.StartTransferResponse
import io.actor_rtc.actr.ActrId
import io.actor_rtc.actr.ActrType
import io.actor_rtc.actr.ContextBridge
import io.actor_rtc.actr.DataStream
import io.actor_rtc.actr.PayloadType
import kotlinx.coroutines.delay
import local_file.File.SendFileRequest
import local_file.File.SendFileResponse

/**
 * LocalFileService æœåŠ¡çš„å…·ä½“å®ç°
 *
 * æ­¤å®ç°è´Ÿè´£å¤„ç†æ–‡ä»¶å‘é€è¯·æ±‚ï¼Œé€šè¿‡ä»¥ä¸‹æ­¥éª¤ï¼š
 * 1. å‘ç° FileTransferService è¿œç¨‹æœåŠ¡
 * 2. å‘é€æ§åˆ¶æ¶ˆæ¯ï¼ˆStartTransfer/EndTransferï¼‰
 * 3. å‘é€æ•°æ®æµï¼ˆDataStream chunksï¼‰
 */
class MyLocalFileService(private val customContent: String? = null) : LocalFileServiceHandler {

    companion object {
        private const val TAG = "MyLocalFileService"
        private const val CHUNK_SIZE = 1024
    }

    // ç¼“å­˜çš„ FileTransferService ID
    private var receiverId: ActrId? = null

    /** è·å–æˆ–å‘ç° FileTransferService */
    private suspend fun getReceiverId(ctx: ContextBridge): ActrId {
        receiverId?.let {
            return it
        }

        val targetType = ActrType(manufacturer = "acme", name = "FileTransferService")
        Log.i(
                TAG,
                "ğŸŒ Discovering receiver via signaling for type: ${targetType.manufacturer}/${targetType.name}"
        )

        val discovered = ctx.discover(targetType)
        Log.i(TAG, "ğŸ¯ Discovered receiver: ${discovered.serialNumber}")

        receiverId = discovered
        return discovered
    }

    /**
     * å®ç° SendFile RPC æ–¹æ³•
     *
     * å¤„ç†æ–‡ä»¶å‘é€è¯·æ±‚ï¼ŒåŒ…æ‹¬ï¼š
     * 1. Phase 1: StartTransfer RPCï¼ˆæ§åˆ¶å¹³é¢ï¼‰
     * 2. Phase 2: å‘é€ DataStream chunksï¼ˆæ•°æ®å¹³é¢ï¼‰
     * 3. Phase 3: EndTransfer RPCï¼ˆæ§åˆ¶å¹³é¢ï¼‰
     */
    override suspend fun send_file(request: SendFileRequest, ctx: ContextBridge): SendFileResponse {
        val filename = request.filename
        Log.i(TAG, "ğŸ“¤ Starting file transfer:")
        Log.i(TAG, "   Filename: $filename")

        try {
            val receiverId = getReceiverId(ctx)
            val (content, chunks) = createContent()

            // Phase 1: StartTransfer RPC (Control Plane)
            Log.i(TAG, "ğŸ“¡ Phase 1: Sending StartTransfer RPC...")
            val startReq =
                    StartTransferRequest.newBuilder()
                            .setStreamId("test-stream-001")
                            .setFilename(filename)
                            .setTotalSize(content.length.toLong())
                            .setChunkCount(chunks.size)
                            .build()

            val startRespPayload =
                    ctx.callRaw(
                            receiverId,
                            "file_transfer.FileTransferService.StartTransfer",
                            PayloadType.RPC_RELIABLE,
                            startReq.toByteArray(),
                            30000L
                    )
            val startResp = StartTransferResponse.parseFrom(startRespPayload)

            if (!startResp.ready) {
                Log.e(TAG, "âŒ Server not ready: ${startResp.message}")
                return SendFileResponse.newBuilder().setSuccess(false).build()
            }

            Log.i(TAG, "âœ… StartTransfer RPC succeeded: ${startResp.message}")

            // Phase 2: Send DataStream chunks (Data Plane - Fast Path)
            Log.i(TAG, "ğŸ“¦ Phase 2: Sending ${chunks.size} DataStream chunks...")

            for ((index, chunk) in chunks.withIndex()) {
                val dataStream =
                        DataStream(
                                streamId = "test-stream-001",
                                sequence = index.toULong(),
                                payload = chunk,
                                metadata = emptyList(),
                                timestampMs = System.currentTimeMillis()
                        )

                ctx.sendDataStreamRaw(receiverId, dataStream)

                val progress = ((index + 1).toFloat() / chunks.size * 100).toInt()
                Log.i(
                        TAG,
                        "   Sent chunk #${index + 1}/${chunks.size}: ${chunk.size} bytes ($progress%)"
                )

                // Small delay to avoid overwhelming the receiver
                delay(10)
            }

            Log.i(TAG, "âœ… All chunks sent successfully")

            // Phase 3: EndTransfer RPC (Control Plane)
            Log.i(TAG, "ğŸ Phase 3: Sending EndTransfer RPC...")
            val endReq =
                    EndTransferRequest.newBuilder()
                            .setStreamId("test-stream-001")
                            .setSuccess(true)
                            .build()

            val endRespPayload =
                    ctx.callRaw(
                            receiverId,
                            "file_transfer.FileTransferService.EndTransfer",
                            PayloadType.RPC_RELIABLE,
                            endReq.toByteArray(),
                            30000L
                    )
            val endResp = EndTransferResponse.parseFrom(endRespPayload)

            Log.i(TAG, "âœ… EndTransfer RPC succeeded!")
            Log.i(TAG, "ğŸ“Š Transfer Statistics:")
            Log.i(TAG, "   Acknowledged: ${endResp.acknowledged}")
            Log.i(TAG, "   Chunks received: ${endResp.chunksReceived}")
            Log.i(TAG, "   Bytes received: ${endResp.bytesReceived}")
            Log.i(TAG, "ğŸ‰ File transfer completed successfully!")

            return SendFileResponse.newBuilder().setSuccess(true).build()
        } catch (e: Exception) {
            Log.e(TAG, "âŒ File transfer failed", e)
            return SendFileResponse.newBuilder().setSuccess(false).build()
        }
    }

    /** åˆ›å»ºæµ‹è¯•å†…å®¹å’Œåˆ†å— */
    private fun createContent(): Pair<String, List<ByteArray>> {
        val content =
                customContent
                        ?: "Hello DataStream from Android! This is a test file content. ".repeat(
                                100
                        )
        val chunks =
                content.toByteArray(Charsets.UTF_8).asIterable().chunked(CHUNK_SIZE).map {
                    it.toByteArray()
                }

        Log.i(TAG, "   Total size: ${content.length} bytes")
        Log.i(TAG, "   Chunk size: $CHUNK_SIZE bytes")
        Log.i(TAG, "   Chunk count: ${chunks.size}")

        return Pair(content, chunks)
    }
}
